added second crl article image and additional speaker notes

--- a/index.html
+++ b/index.html
@@ -57,8 +57,21 @@ So this is what I really wanted to call this presentation. In part because I thi
 
 <img data-src="acrlrepro.png">
 
+
 		<aside class="notes">
-I need to mention that most of the work I've done in this area has been with Amy Reigelman the Social Science librarian at UMN. Amy and I have two recent papers, this editorial on reproducibility and another paper that presents a model for services around reproducibility that should be in C&RL in the next couple months. 
+Before I get started I need to mention that most of the work represented in this presentation is the result of collaboration with my colleague Amy Reigelman, the Social Science librarian at UMN. Amy and I have two recent papers, this editorial on reproducibility and another paper that presents a model for services around reproducibility that should be in C&RL in the next couple months. 
+
+	</aside>
+	
+</section>
+
+<section>
+
+<img data-src="crl2.png">
+
+
+		<aside class="notes">
+
 
 	</aside>
 	
@@ -91,7 +104,8 @@ Three takeaways
 	> "the ability of a researcher to duplicate the results of a prior study using the <em style="color:Tomato;">same materials and procedures</em> as were used by the original investigator."
 
 <aside class="notes">
-Ok! Definition time! 
+First, quick definitions. These definitions come from NIH reports, and we like them because they distinguish between reproducibility and replicability in a way that 
+
 
 </aside>
 	
@@ -114,7 +128,11 @@ Ok! Definition time!
 
 <section data-background-image="9368801248_da56d822b8_o.jpg">
 	<h2 style="color:Tomato;">Why Academic Librarians and Reproducibility?</h2>
-	<aside class="notes">
+
+<aside class="notes">
+While talking with faculty I've needed to be proactive about addressing what is an obvious and I think reasonable question many of them have: Why me? Why is a librarian talking to them about reproducibility? 
+
+We’re not researchers. Or, actually, we are, but our research tends to be about how people use and organize information. I’m totally comfortable talking about methods and reproducibility of systematic reviews, or bibliometric research, but when I think about research I tend to think about it in terms of how it is structured, organized, made available, and a little about how it is evaluated. I tend to think about research in terms of how it is packaged. 
 
 
 </aside>
