added final speaker notes from faculty repro presentation

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ So this is what I really wanted to call this presentation. In part because I thi
 
 
 		<aside class="notes">
-Before I get started I need to mention that most of the work represented in this presentation is the result of collaboration with my colleague Amy Reigelman, the Social Science librarian at UMN. Amy and I have two recent papers, this editorial on reproducibility and another paper that presents a model for services around reproducibility that should be in C&RL in the next couple months. 
+Before I get started I need to mention that most of the work represented in this presentation is the result of collaboration with my colleague Amy Reigelman, the Social Science librarian at UMN. Amy and I have two recent papers, this editorial in C&RL on librarian roles supporting reproducibility
 
 	</aside>
 	
@@ -71,7 +71,7 @@ Before I get started I need to mention that most of the work represented in this
 
 
 		<aside class="notes">
-
+And a second paper that is in press and should be available in the next month or two, also in C&RL, on replicable services for reproducibile research, that presents a broad model for how we can address the recommendations in reproducibility guidelines. 
 
 	</aside>
 	
@@ -103,9 +103,11 @@ Three takeaways
 	
 	> "the ability of a researcher to duplicate the results of a prior study using the <em style="color:Tomato;">same materials and procedures</em> as were used by the original investigator."
 
-<aside class="notes">
-First, quick definitions. These definitions come from NIH reports, and we like them because they distinguish between reproducibility and replicability in a way that 
+<small>Bollen, K., Cacioppo, J., Kaplan, R., Krosnick, J. A., & Olds, J. L. (2015). Social, Behavioral, and Economic Sciences Perspectives on Robust and Reliable Science. Report of the Subcommittee on Replicability in Science Advisory Committee to the National Science Foundation Directorate for Social, Behavioral, and Economic Sciences.</small>
 
+
+<aside class="notes">
+First, quick definitions. These definitions come from NSF report. Definitions for reproducibility and replicability vary and often conflict between sources. 
 
 </aside>
 	
@@ -117,8 +119,12 @@ First, quick definitions. These definitions come from NIH reports, and we like t
 	### Replicability
 	
 	> “the ability of a researcher to duplicate the results of a prior study if the same procedures are followed but <em style="color:Tomato;">new data are collected</em>.” 
+
+	<small>Bollen, K., Cacioppo, J., Kaplan, R., Krosnick, J. A., & Olds, J. L. (2015). Social, Behavioral, and Economic Sciences Perspectives on Robust and Reliable Science. Report of the Subcommittee on Replicability in Science Advisory Committee to the National Science Foundation Directorate for Social, Behavioral, and Economic Sciences.</small>
+
 <aside class="notes">
 
+This is distinguished from replicability, which is the ability to duplicate (not necessarily exactly) the results while gathering new data. Replicability goes further than reproducibility, and in many ways relies on the same things as reproducibility. 
 
 </aside>
 	
@@ -132,7 +138,7 @@ First, quick definitions. These definitions come from NIH reports, and we like t
 <aside class="notes">
 While talking with faculty I've needed to be proactive about addressing what is an obvious and I think reasonable question many of them have: Why me? Why is a librarian talking to them about reproducibility? 
 
-We’re not researchers. Or, actually, we are, but our research tends to be about how people use and organize information. I’m totally comfortable talking about methods and reproducibility of systematic reviews, or bibliometric research, but when I think about research I tend to think about it in terms of how it is structured, organized, made available, and a little about how it is evaluated. I tend to think about research in terms of how it is packaged. 
+We’re not researchers. Or, actually, we are, but our research tends to be about how people use and organize information. I’m totally comfortable talking about methods and reproducibility of systematic reviews, or bibliometric research, but when I think about research I tend to think about it in terms of how it is structured, organized, made available, and a little about how it is evaluated. I tend to think about research in terms of how it is reported or packaged. 
 
 
 </aside>
@@ -204,6 +210,10 @@ We’re not researchers. Or, actually, we are, but our research tends to be abou
 
 <aside class="notes">
 
+Okay, So: Reproducibility Guidelines, much like treatment guidelines, are generally consensus statements of best practices towards the goal of improving the reproducibility of results. Again, we really like centering our discussion on guidelines because they (a) come from researchers and publishers themselves, and (b) demonstrate some of the commonalities and differences between disciplines and organizations.
+
+Just want to mention that we are only looking at 3 guidelines here (TOP, ASA, NIH). There are MANY more guidelines, incuding from funders, journals, and for specific disciplines, methodologies, research areas, and even conferences. Amy and I are currently working on a research project that tries to make these easier to find and use, so if you’re interested in guideliens for your specific area please get in touch with us 
+
 
 </aside>
 </section>
@@ -215,6 +225,10 @@ We’re not researchers. Or, actually, we are, but our research tends to be abou
 	</textarea>
 
 <aside class="notes">
+
+So, first I’m going to talk about the Transparency and Openness Promotion (TOP) Guidelines. The TOP guidelines were developed by a group of scientists, journal editors, and open science advocates and are meant to be adopted by journals. They are a flexible set of 9 criteria that can adopted at various levels of enforcement in order to meet disciplinary norms and goals. As of October of last year  Over 5,000* journals and organizations have become signatories to the TOP Guidelines, including all Elsevier journals.
+
+While they are meant to be adopted by journals, once they are fully implemented they have significant affects of researchers. 
 
 
 </aside>
@@ -251,6 +265,13 @@ We’re not researchers. Or, actually, we are, but our research tends to be abou
 	<textarea data-template>
 	### American Statistical Association (ASA) Guidelines
 <aside class="notes">
+
+Next, the American Statistical Association Guidelines. ASA has been doing really interesting work on Reproducibility
+
+Repro editors, include Julian Wolfson in Public Health
+Victoria Stodden is another repro editor
+
+These are meant for funders and represent ASAs interest, but we think are interesting in a number of ways for how they are similar to and different from the TOP guidelines and NIH recommendations
 
 
 </aside>
