charlie.gif is BACK IN THE GAME -- also added NIH Guidelines, fixed colors

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-<section data-markdown >
+<section data-markdown data-background-color="#F6F5BB">
 	<textarea data-template>
 	
 	
@@ -75,6 +75,14 @@ And a second paper that is in press and should be available in the next month or
 
 	</aside>
 	
+</section>
+
+<section data-background-image="charlie.gif">
+	<h1 style="color:black;">TAKE-AWAYS
+		<aside class="notes">
+
+	</aside>
+
 </section>
 
 <section data-markdown>
@@ -218,7 +226,7 @@ Just want to mention that we are only looking at 3 guidelines here (TOP, ASA, NI
 </aside>
 </section>
 
-<section data-markdown data-background-color="#fa9f42">
+<section data-markdown data-background-color="#F6F5BB">
 	<textarea data-template>
 
 ### TOP (Transparency and Openness Prom	otion) Guidelines
@@ -261,7 +269,7 @@ While they are meant to be adopted by journals, once they are fully implemented 
 	</textarea>
 </section>
 
-<section data-markdown data-background-color="#fa9f42">
+<section data-markdown data-background-color="#F6F5BB">
 	<textarea data-template>
 	### American Statistical Association (ASA) Guidelines
 <aside class="notes">
@@ -318,7 +326,7 @@ These are meant for funders and represent ASAs interest, but we think are intere
 	</textarea>
 </section>
 
-<section data-markdown data-background-color="#fa9f42">
+<section data-markdown data-background-color="#F6F5BB">
 	<textarea data-template>
 	
 	### NIH Guidelines
@@ -329,7 +337,63 @@ These are meant for funders and represent ASAs interest, but we think are intere
 	</textarea>
 </section>
 
-<section data-markdown data-background-color="#fa9f42">
+<section data-markdown>
+	<textarea data-template>
+	
+	### NIH Guidelines
+	
+	5 recommendations contained in the Principles and Guidelines for Reporting Preclinical Research
+
+
+<aside class="notes">
+
+
+</aside>
+
+	</textarea>
+</section>
+
+<section data-markdown>
+	<textarea data-template>
+	
+	### NIH Guidelines
+	
+1. Rigorous statistical analysis
+2. Transparency in reporting methods
+3. Data and materials sharing
+4. Consideration of refutations
+5. Building best practices around materials transparency and sharing
+
+
+<aside class="notes">
+
+
+</aside>
+
+	</textarea>
+</section>
+
+<section data-markdown>
+	<textarea data-template>
+	
+	### Other Guidelines
+	
+	- NIH Framework
+	- Disciplinary & Society Guidelines
+	- Journal Checklists
+	- Methodology-based Guidelines
+	
+
+
+<aside class="notes">
+
+
+</aside>
+
+	</textarea>
+</section>
+
+<section data-markdown data-background-color="#F6F5BB">
 	<textarea data-template>
 	
 	## Revisiting Our Role in the reporting of science
@@ -343,7 +407,7 @@ These are meant for funders and represent ASAs interest, but we think are intere
 <section data-markdown>
 	<textarea data-template>
 	
-### Packaging
+### Reporting
 
 * Was the research published? <em style="color:Tomato;">(Registered Reports, Pre-Registration, Pre-Prints, Traditional Publications)</em>
 * Were methods adequately reported? <em style="color:Tomato;">(Reporting Guidelines)</em>
@@ -358,7 +422,7 @@ These are meant for funders and represent ASAs interest, but we think are intere
 <section data-markdown>
 	<textarea data-template>
 	
-### Packaging
+### Reporting
 
 * Was there code, data, and materials transparency? <em style="color:Tomato;">(Disciplinary and institutional repositories, appropriate citation of papers, code, materials, Data Management)</em>
 * Is the published article accessible? <em style="color:Tomato;">(Open Access, Preprints, Self-Archiving)</em>
@@ -370,7 +434,7 @@ These are meant for funders and represent ASAs interest, but we think are intere
 	</textarea>
 </section>
 
-<section data-markdown>
+<section data-markdown data-background-color="#F6F5BB">
 	<textarea data-template>
 	
 ### Questions?
