changing colors and adding image credits

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-<section data-markdown data-background-color="#F6F5BB">
+<section data-markdown data-background-color="#F0EDEE">
 	<textarea data-template>
 	
 	
@@ -226,7 +226,7 @@ Just want to mention that we are only looking at 3 guidelines here (TOP, ASA, NI
 </aside>
 </section>
 
-<section data-markdown data-background-color="#F6F5BB">
+<section data-markdown data-background-color="#F0EDEE">
 	<textarea data-template>
 
 ### TOP (Transparency and Openness Prom	otion) Guidelines
@@ -269,7 +269,7 @@ While they are meant to be adopted by journals, once they are fully implemented 
 	</textarea>
 </section>
 
-<section data-markdown data-background-color="#F6F5BB">
+<section data-markdown data-background-color="#F0EDEE">
 	<textarea data-template>
 	### American Statistical Association (ASA) Guidelines
 <aside class="notes">
@@ -326,7 +326,7 @@ These are meant for funders and represent ASAs interest, but we think are intere
 	</textarea>
 </section>
 
-<section data-markdown data-background-color="#F6F5BB">
+<section data-markdown data-background-color="#F0EDEE">
 	<textarea data-template>
 	
 	### NIH Guidelines
@@ -393,7 +393,7 @@ These are meant for funders and represent ASAs interest, but we think are intere
 	</textarea>
 </section>
 
-<section data-markdown data-background-color="#F6F5BB">
+<section data-markdown data-background-color="#F0EDEE">
 	<textarea data-template>
 	
 	## Revisiting Our Role in the reporting of science
@@ -434,7 +434,7 @@ These are meant for funders and represent ASAs interest, but we think are intere
 	</textarea>
 </section>
 
-<section data-markdown data-background-color="#F6F5BB">
+<section data-markdown data-background-color="#F0EDEE">
 	<textarea data-template>
 	
 ### Questions?
@@ -450,7 +450,10 @@ These are meant for funders and represent ASAs interest, but we think are intere
 	
 ### Image Credits
 
-- 
+- [Card Catalog](https://www.flickr.com/photos/andylangager/9368801248/) by Andy Langager
+- [Harry in a Box](https://www.flickr.com/photos/nwater/17330655219/) by Michael Frank Franz
+
+
 <aside class="notes">
 
 
