--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ And a second paper that is in press and should be available in the next month or
 	<h2>Take-aways</h2>
 	
 	<p class="fragment fade-in">1. Reproducibility is, to a large degree, the work of academic librarians.</em></p>
-	<p class="fragment fade-up">2. Data, broadly defined, is a major part of reproducibility.</p>
-	<p class="fragment fade-up">3. Reproducibility is not a component of data management. Data management is a component of reproducibility</p>
+	<p class="fragment fade-up">2. Data curation and sharing, broadly defined, is a major part of reproducibility guidelines.</p>
+	<p class="fragment fade-up">3. Reproducibility is not a component of data management. Data management is a component of reproducibility.</p>
 
 <aside class="notes">
 Three takeaways
