added stodden levels

--- a/index.html
+++ b/index.html
@@ -166,6 +166,17 @@ We’re not researchers. Or, actually, we are, but our research tends to be abou
 	</textarea>
 </section>
 
+<section>
+
+<img data-src="levels.png">
+
+
+	<aside class="notes">
+
+	</aside>
+	
+</section>
+
 <section data-markdown data-background-image="17330655219_94e99f2eca_h.jpg">
 	<textarea data-template>
 
