--- a/index.html
+++ b/index.html
@@ -139,6 +139,26 @@ This is distinguished from replicability, which is the ability to duplicate (not
 	</textarea>
 </section>
 
+<section data-markdown>
+
+<textarea data-template>
+
+
+### Levels of Reproducibility
+
+<img data-src="levels.png">
+
+<small>Levels of Reproducibility from:  Stodden, V., Bailey, D. H., Borwein, J., Leveque, R. J., Rider, W., & Stein, W. (2014). Setting the Default to Reproducible Reproducibility in Computational and Experimental Mathematics.</small>
+
+
+<aside class="notes">
+
+</aside>
+	
+	</textarea>
+	
+</section>
+
 
 <section data-background-image="9368801248_da56d822b8_o.jpg">
 	<h2 style="color:Tomato;">Why Academic Librarians and Reproducibility?</h2>
@@ -166,16 +186,7 @@ We’re not researchers. Or, actually, we are, but our research tends to be abou
 	</textarea>
 </section>
 
-<section>
 
-<img data-src="levels.png">
-
-
-	<aside class="notes">
-
-	</aside>
-	
-</section>
 
 <section data-markdown data-background-image="17330655219_94e99f2eca_h.jpg">
 	<textarea data-template>
